tests/lean/inaccessible.lean.expected.out
inaccessible.lean:14:10: error: function expected at
  mk
inaccessible.lean:14:2: error: invalid occurrence of macro expression in pattern (possible solution, mark term as inaccessible using '.( )')
  sorry
inaccessible.lean:14:17: error: ill-formed match/equations expression
inaccessible.lean:13:11: warning: declaration 'inv_3' uses sorry
inaccessible.lean:13:11: warning: declaration 'inv_3.equations._eqn_1' uses sorry
inaccessible.lean:17:11: error: invalid inaccessible annotation, it cannot be used around functions in applications
inaccessible.lean:25:12: error: invalid pattern, 'a' already appeared in this pattern
inaccessible.lean:28:3: error: function expected at
  f
inaccessible.lean:28:2: error: type mismatch at application
  inv_7 sorry (mk b)
term
  mk b
has type
  imf .?m_3 (.?m_3 b)
but is expected to have type
  imf f sorry
inaccessible.lean:28:16: error: ill-formed match/equations expression
inaccessible.lean:27:11: warning: declaration 'inv_7' uses sorry
inaccessible.lean:27:11: warning: declaration 'inv_7.equations._eqn_1' uses sorry
inaccessible.lean:31:4: error: invalid pattern, 'a' already appeared in this pattern
inaccessible.lean:82:3: error: invalid use of inaccessible term, it is not completely fixed by other arguments
  .?m_1 + 1
inaccessible.lean:80:11: warning: declaration 'map_6' uses sorry
inaccessible.lean:80:11: warning: declaration 'map_6.equations._eqn_1' uses sorry
